Ids das columns e red ball de exemplo

--- a/style.css
+++ b/style.css
@@ -65,6 +65,21 @@ main {
     border: 2px solid black;
 }
 
+
+.ballRed{
+    background-color: red;
+    width: 30px;
+    height: 30px;
+    border-radius: 50px;
+}
+
+.ballBlack{
+    background-color: black;
+    width: 30px;
+    height: 30px;
+    border-radius: 50px;
+}
+
 /* 
 .hidden{
     display: none;
