--- a/style.css
+++ b/style.css
@@ -13,6 +13,9 @@ body {
     background: linear-gradient(45deg,#121013, #4d375d, #eb596e, #ee3960);
     background-size: 600% 600%;
     animation: colors 10s ease infinite;
+    overflow-x: hidden;
+    display: flex;
+    flex-direction: column;
 }
 
 header {
@@ -104,6 +107,7 @@ main {
     font-size: 30px;
     color: rgb(110, 255, 110);
     text-shadow: 0px 0px 7px rgb(30, 253, 30);
+    
 }
 
 #player1 {
@@ -186,18 +190,47 @@ main {
 }
 
 .borderGatinho1{
-    text-shadow: 0px 0px 10px rgb(34, 97, 34);
+   
+    border:rgb(255, 133, 200) solid 5px;
+    border-radius:20px;
+    box-shadow: 0px 0px 7px rgb(226, 22, 134);
+    transition: all 0.3s;
+    transform: scale(1.2);
 
 }
 
 .borderGatinho2{
-    text-shadow: 0px 0px 10px rgb(175, 45, 45);
+
+    border:rgb(110, 255, 110) solid 5px;
+    border-radius:20px;
+    box-shadow: 0px 0px 7px rgb(30, 253, 30);
+    transition: all 0.3s;
+	transform: scale(1.2);
+
 }
 
+#victory{
+    background-color: purple;
+    position: absolute;
+    width: 100vw;
+    height: 100vh;
+}
+
+
+#drawn{
+    background-color: red;
+    position: absolute;
+    width: 100vw;
+    height: 100vh;
+}
 /* TELAS */
 
 @media only screen and (min-width: 992px) {
 
+    body{
+        flex-direction: column;
+        overflow: hidden;
+    }
     main {
         flex-direction: row;
     }
@@ -214,6 +247,7 @@ main {
 
     #player2 {
         flex-direction: column-reverse;
+       
     }
 
     #gatinho1 {
