--- a/style.css
+++ b/style.css
@@ -220,7 +220,7 @@ main {
     background-repeat: no-repeat;
     position: absolute;
     width: 100vw;
-    height: auto;
+    height: 100vh;
     color: rgb(225, 0, 255);
     font-size: 35px;
 }
@@ -233,21 +233,23 @@ main {
 }
 
 #victory1 img {
+
     width: 300PX;
     margin-left: 10px;
 }
 
-#btnreset1 {
-    margin: 10px 110px;
-    height: 90px;
-    width: 90px;
-    border: 2px solid aqua;
-    border-radius: 100%;
-    background-color: rgb(118, 252, 252);
-    box-shadow: 0px 0px 10px rgb(11, 221, 221);
-    cursor: pointer;
-    font-family: var(--fontFam);
-    font-size: 26px;
+.btn {
+    width: 30vw;
+    height: 40px;
+    background-color: white;
+    font-size: 30px;
+    padding-bottom: 5px;
+    font-family:neon ;
+    animation: mybutton 5s infinite;
+    border-radius: 5px;
+    position: absolute;
+    top: 90%;
+    left: 35%;
 }
 
 /* VITORIA PLAYER 2 */
@@ -273,19 +275,6 @@ main {
 #victory2 img {
     width: 300PX;
     margin-left: 10px;
-}
-
-#btnreset2 {
-    margin: 10px 110px;
-    height: 90px;
-    width: 90px;
-    border: 2px solid aqua;
-    border-radius: 100%;
-    background-color: rgb(118, 252, 252);
-    box-shadow: 0px 0px 10px rgb(11, 221, 221);
-    cursor: pointer;
-    font-family: var(--fontFam);
-    font-size: 26px;
 }
 
 .drawn{
@@ -328,6 +317,18 @@ main {
 
 }
 /* TELAS */
+
+@media only screen and (min-width: 768px) {
+    #victory1 img {
+        position: absolute;
+        left: 30%;
+    }
+
+    .btn {
+        width: 100px;
+        left: 45%;
+    }
+}
 
 @media only screen and (min-width: 992px) {
 
@@ -397,13 +398,7 @@ main {
     #textempate{
         width: 273px;
     }
-    #btnreset{
-        width: 10vw;
-        height: 40px;
-        background-color: white;
-        
-        border-radius: 5px;
-    }
+
     #victory1 {
         height: 100vh;
     }
@@ -415,10 +410,10 @@ main {
         width: 400px;
     }
 
-    #btnreset1 {
-        position: absolute;
-        top: 80%;
-        left: 39%;
+    .btn {
+        width: 100px;
+        top: 85%;
+        left: 48%;
     }
 
     #victory2 {
@@ -431,15 +426,6 @@ main {
         left: 35%;
         width: 400px;
     }
-
-    #btnreset2 {
-        position: absolute;
-        top: 80%;
-        left: 39%;
-    }
-}
-
-@media only screen and (min-width: 1024px) {
 
 }
 
